Änderungen im Footer

--- a/Shared/Footer.html
+++ b/Shared/Footer.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    Ich trage meine Maske gerne und habe vieles von Robin übernommen!
+    Die Seite iost hier Schluss. <br>
+    Gehen Sie nun!
 </body>
 </html>
