--- a/Shared/Footer.html
+++ b/Shared/Footer.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    Die Seite iost hier Schluss. <br>
+    Die Seite ist hier Schluss. <br>
     Gehen Sie nun!
 </body>
 </html>
