Die Schlanghe hat nur ein Auge

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -20,5 +20,31 @@ Inhalte
     Bilder
 Aufwand und Zeiten
 
+<h2>Einleitung</h2>
+<section>
+    <p>
+        Für den Leistungsnachweis in den Modulen Grundlagen Webprogrammierung sowie Dynamische Webprogrammierung ein Online-Shop für einen fiktiven oder realen Anbieter zu erstellen.
+        Zum Einsatz sollen hierbei PHP und html kommen, wobei die einzelnen Seiten dynamisch mittels php zusammengesetzt werden sollen.
+        Das zu liefernde Produkt soll mindestens 6 Seiten sowie mindestens drei Unterseiten beinhalten und eine einheitliche Navigation über zwei Ebenen bieten.
+    </p>
+</section>
+
+<h2>Ausgangssituation und Zielbestimmung</h2>
+<h3>Ausgangssituation</h3>
+<section>
+    <p>
+        Bei „Mask Your Face“ handelt es sich um ein derzeit mittelständisches Unternehmen. Das Unternehmen verkauft Masken in verschiedenen Kategorien (Mundschutz, Kindermasken, Masken, die das gesamte Gesicht bedecken). Eine genaue Zielgruppe für das Unternehmen gibt es nicht, da die Masken von allen Personenkreisen getragen werden können. Das Maskensortiment lässt sich derzeit in drei verschiedene Marken aufgliedern: „MaskenBuildner“, „Ilon Mask“ sowie „Masken Boys“. Aus aktueller Sicht ist nicht geplant weitere Marken aufzunehmen, es ist jedoch nicht auszuschließen, dass in Zukunft weitere Marken hinzugenommen werden.
+        Um den Kundenkreis weiter ausbauen zu können, soll für das Unternehmen ein Webshop geplant und implementiert werden.
+
+    </p>
+</section>
+
+<h3>Analyse</h3>
+<sectio>
+    <p>
+        In Vorbereitung auf die Zielbestimmungen wurde zunächst eine Analyse durchgeführt, um zu planen, welche Funktionen für den Onlineshop essenziell sind. Hierfür wurden einige online-Shops aus der Textil / und Maskenbranche entsprechend herausgesucht und auf positive, sowie negative Aspekte untersucht. Die relevantesten Onlineshops dieser Recherche sind nachfolgend aufgelistet.
+    </p>
+</sectio>
+
 </body>
 </html>
