Änderungen in MySpace

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1381,7 +1381,13 @@
                 <td> 5 h</td>
             </tr>
             <tr>
-                <td>28.11</td>
+                <td> 27.11</td>
+                <td> Erste Entwürfe Logo</td>
+                <td> John Klippstein</td>
+                <td> 2 h</td>
+            </tr>
+            <tr>
+                <td> 28.11</td>
                 <td> ER-Diagramm erstellen</td>
                 <td> Robin Beck</td>
                 <td> 30 min</td>
@@ -1444,6 +1450,12 @@
                 <td>18.12</td>
                 <td> Use Cases abstimmen, weiteres Vorgehen besprechen</td>
                 <td> John Klippstein,Hannes Lenz,Robin Beck</td>
+                <td> 2 h</td>
+            </tr>
+            <tr>
+                <td>19.12</td>
+                <td> Logo überarbeitet</td>
+                <td> John Klippstein</td>
                 <td> 2 h</td>
             </tr>
             <tr>
@@ -1653,6 +1665,12 @@
             <tr>
                 <td>28.01</td>
                 <td>Erstellen von Testdaten und zusammenführen SQL-Dumps</td>
+                <td>John Klippstein</td>
+                <td> 2 h</td>
+            </tr>
+            <tr>
+                <td>29.01</td>
+                <td>Überarbeitung "Mein Konto"</td>
                 <td>John Klippstein</td>
                 <td> 2 h</td>
             </tr>
