added stuff to docu

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1674,6 +1674,18 @@
                 <td>John Klippstein</td>
                 <td> 2 h</td>
             </tr>
+            <tr>
+                <td>29.01</td>
+                <td>Ausbau der Dokumentation</td>
+                <td>Robin Beck</td>
+                <td>2,5h</td>
+            </tr>
+            <tr>
+                <td>29.01</td>
+                <td>Überarbeitung der CSS für Warenkorb, "Unsere Marken" und Kaufbestätigung</td>
+                <td>Robin Beck</td>
+                <td>2h</td>
+            </tr>
         </table>
     </div>
 </body>
