--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -721,8 +721,8 @@
         <h4>Registrierung</h4>
         <section>
             <p>
-                Auf dieser Seite trägt der zu registrierende Nutzer die notwendigen persönlichen Daten an, diese werden noch auf Vollständigkeit und Korrektheit geprüft.
-                Darauf hin wird ein neuer Nutzer und dazugehöriger Login in der Datenbank angelegt und die Infos werden dort gespeichert für die spätere Anmeldung.
+                Auf dieser Seite trägt der zu registrierende Nutzer die notwendigen persönlichen Daten an, diese werden noch auf Vollständigkeit und Korrektheit geprüft. Darauf hin wird ein neuer Nutzer und dazugehöriger Login in der Datenbank angelegt und die Infos
+                werden dort gespeichert für die spätere Anmeldung.
             </p>
         </section>
         <h2 id="database">Datenbank</h2>
@@ -1695,22 +1695,40 @@
                 <td> 2 h</td>
             </tr>
             <tr>
-                <td>29.01</td>
+                <td>28.01</td>
                 <td>Überarbeitung "Mein Konto"</td>
                 <td>John Klippstein</td>
                 <td> 2 h</td>
             </tr>
             <tr>
-                <td>29.01</td>
+                <td>28.01</td>
                 <td>Ausbau der Dokumentation</td>
                 <td>Robin Beck</td>
                 <td>2,5h</td>
             </tr>
             <tr>
-                <td>29.01</td>
+                <td>28.01</td>
                 <td>Überarbeitung der CSS für Warenkorb, "Unsere Marken" und Kaufbestätigung</td>
                 <td>Robin Beck</td>
                 <td>2h</td>
+            </tr>
+            <tr>
+                <td>29.01</td>
+                <td>Abgleich aktueller Stand und Planung des weiteren Vorgehens</td>
+                <td>Hannes Lenz, John Klippstein, Robin Beck</td>
+                <td>1h</td>
+            </tr>
+            <tr>
+                <td>29.01</td>
+                <td>Überarbeitung der CSS, hinzufügen von favicon, benutzerdefinierte Checkboxen</td>
+                <td>Robin Beck</td>
+                <td>3h</td>
+            </tr>
+            <tr>
+                <td>29.01</td>
+                <td>Diverse kleinere Bugfixes in Javascript / Ajax</td>
+                <td>Robin Beck</td>
+                <td>1h</td>
             </tr>
         </table>
     </div>
