--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -450,10 +450,13 @@
                     <li>sehr starke Lichtquelle hinter dem Object als Spotlight in Richtung Kamera gerichtet, um die Konturen hervorzuheben</li>
                 </ul>
             </p>
-            <p>Zusätzlich wurde im Hintergrund - zumindest für die Hauptansicht - das Logo "Mask Your Face" als Wanddekor befestigt. Da das Bild somit rechts relativ voll und links relativ leer war, wurde zusätzlich noch eine Pflanze modelliert und im linken
-                Part des Bildes ausgerichtet.</p>
+            <p>
+                Zusätzlich wurde im Hintergrund - zumindest für die Hauptansicht - das Logo "Mask Your Face" als Wanddekor befestigt. Da das Bild somit rechts relativ voll und links relativ leer war, wurde zusätzlich noch eine Pflanze modelliert und im linken Part des
+                Bildes ausgerichtet.
+            </p>
             <p>Da das Bild durch Pflanze und Logo zwar ausgefüllter, aber auch unruhiger wirkte, wurde zusätzlich noch der Fokus der Kamera soi eingestellt, dass die Maske fokussiert wird und somit die Pflanze und der Hintergrund leicht unscharf werden.</p>
-            <p>Für die Produkte wurden drei generelle Ansichten ausgewählt:
+            <p>
+                Für die Produkte wurden drei generelle Ansichten ausgewählt:
                 <ul>
                     <li>Ansicht von oben rechts</li>
                     <li>Frontale</li>
@@ -463,8 +466,10 @@
             <p>
                 Die Ansicht von oben rechts stellt hierbei jeweils die Vorschaubilder für die Produktkacheln dar. Bei der Frontalen wurde das Logo ausgeblendet, da dieses sonst zu aufdringlich wirkt. In der Seitenansicht sind weder die Pflanze, noch das Logo sichtbar.
             </p>
-            <p>Um eine möglichst große Produktvielfalt mit möglichst "geringem" Aufwand zu ermöglichen, wurde bewusst darauf verzeichtet mehrere Farbvarianten eines Produktes in einer Auflistung zusammenzufassen. Für die verschiedenen Muster wurden Texturen
-                von <a href="https://3dtextures.me/">3D Textures</a> genutzt</p>
+            <p>
+                Um eine möglichst große Produktvielfalt mit möglichst "geringem" Aufwand zu ermöglichen, wurde bewusst darauf verzeichtet mehrere Farbvarianten eines Produktes in einer Auflistung zusammenzufassen. Für die verschiedenen Muster wurden Texturen von
+                <a href="https://3dtextures.me/">3D Textures</a> genutzt
+            </p>
         </section>
         <h2 id="pages">Seiten</h2>
         <h3>Seitenbestandteile</h3>
