--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1769,6 +1769,12 @@
                 <td>Robin Beck</td>
                 <td>1h</td>
             </tr>
+            <tr>
+                <td>30.01</td>
+                <td>Diverse CSS anpassungen / kleinere Korrekturen an der DB</td>
+                <td>Robin Beck</td>
+                <td>4,5h</td>
+            </tr>
         </table>
     </div>
 </body>
