--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1775,6 +1775,12 @@
                 <td>Robin Beck</td>
                 <td>4,5h</td>
             </tr>
+            <tr>
+                <td>31.01</td>
+                <td>Überarbeitung Footer/CSS/Doku</td>
+                <td>John Klippstein</td>
+                <td>2.5h</td>
+            </tr>
         </table>
     </div>
 </body>
