--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -17,14 +17,15 @@
         <a href="#pages">5 Seiten</a>
         <a href="#database">6 Datenbank</a>
         <a href="#roles">7 Rollenmodell</a>
-        <a href="#projectManagement">8 Projektplanung</a>
+        <a href="#tests">8 Tests & Probleme</a>
+        <a href="#projectManagement">9 Projektplanung</a>
         <a class="bottom" href="../index.php?c=pages&a=index">Zurück zur Seite</a>
     </div>
     <h1>Dokumentation MaskYourFace</h1>
     <div class="content">
         <b>
                 Eine Gemeinschaftsarbeit von
-                <br>
+                <!-- <br> -->
                 Robin Beck, Hannes Lenz, John Klippstein
             </b>
         <hr> Inhaltsverzeichnis: Einleitung Idee Inhalte ER Seiten Code Bilder Aufwand und Zeiten
@@ -1381,6 +1382,28 @@
                 <span class="imageTitle">Use-Case Bestehendes Produkt bearbeiten</span>
             </section>
         </section>
+        <h2 id="tests">Tests & Probleme</h2>
+        <section>
+            <p>Um weitestgehend sicherzustellen, dass das Projekt unter verschiedenen Bedingungen lauffähig ist, wurden verschiedene Browser sowie Monitore in verschiedenen Auflösungen zum Testen und Entwickeln der Webseite genutzt.</p>
+            <p>
+                Zu den genutzten Browsern gehören:
+                <ul>
+                    <li>Microsoft Edge</li>
+                    <li>Vivaldi</li>
+                    <li>Firefox Developer</li>
+                    <li>Opera</li>
+                </ul>
+            </p>
+            <p>Zudem wurde das System auch unter Linux mithilfe von Xampp getestet, um eventuell auftretende Probleme auf unixoiden Betriebssystemen zu finden und diesen entgegenzuwirken.</p>
+        </section>
+        <h3>Probleme</h3>
+        <p>Bei dem Test auf Linux sind zwei wesentliche Probleme aufgetreten, für die es galt einen Workaround zu finden. Einerseits ist hierbei aufgefallen, dass durch phpmyadmin standardmäßig Tabellen immer in Kleinbuchstaben gespeichert werden. Unter
+            Windows sind hierbei keine Probleme aufgetreten. Da Linux allerdings Case-Sensitiv ist, haben sämtliche Zugriffe auf mit camelCase geschriebene Tabellen nicht mehr Funktioniert. Das Problem wurd egelöst, indem im Base Model die Methode tablename()
+            grundsätzlich nur einen lower-case string zurückliefert.</p>
+        <p>Ein Weiteres Problem im Zusammenhang mit Linux ist bei den Bildern aufgetreten. Da die Pfade - zumindest - relativ in der Datenbank gespeichert wurden, wurde auch das Pfadtrennzeichen des aktuellen Betriebssystems in der Datenbank gespeichert.
+            Da die Bilder alle unter Windows hochgeladen wurden, handelte es sich hierbei um "\". Somit wurden sämtliche Bilder unter Linux nicht mehr angezeigt. Um das Problem zu beheben, ohne die Datenbank zu manipulieren oder die Bilder (ein weiteres
+            mal) erneut einlesen zu müssen, wurde die Image Klasse um einen Magic Getter erweitert, der sämtliche Vorkommen von "/" und "\" im relativen Pfad ausfindig macht und diese durch das Trennzeichen des aktuellen Betriebssystems ersetzt. Somit
+            ist das Projekt auch mit Beispieldaten sowohl für Windows als auch für Unixoide Betriebssysteme lauffähig.</p>
         <h2 id="projectManagement">Projektplanung</h2>
         <h3>Meilensteinplan</h3>
         <h3>Auflistung des Zeitbedarfs</h3>
@@ -1779,7 +1802,13 @@
                 <td>31.01</td>
                 <td>Überarbeitung Footer/CSS/Doku</td>
                 <td>John Klippstein</td>
-                <td>3.5 h</td>
+                <td>3,5 h</td>
+            </tr>
+            <tr>
+                <td>01.02</td>
+                <td>Geringfügige CSS Anpassungen, Erweiterung der Doku</td>
+                <td>Robin Beck</td>
+                <td>1,5 h</td>
             </tr>
         </table>
     </div>
